--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -22,6 +22,7 @@ jobs:
           mkdir build
           DEBUG=All,-sections,-codeblocks,-Link,-Viewers dotlit generate -b "/" ./src -o ./build
       - name: Deploy 🚀
+        if: ${{ github.event_name != 'pull_request' }}
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
