--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "js-yaml": "^4.0.0",
     "mdast-util-heading-range": "^2.1.5",
     "mdast-util-to-string": "3.1.0",
+    "mime-types": "*",
     "mkdirp": "^1.0.4",
     "node-fetch": "*",
     "path-browserify": "^1.0.1",
