--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dotlit/dotlit",
-  "version": "1.5.10",
+  "version": "1.5.11",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -43,7 +43,6 @@
     "glob": "^7.1.6",
     "glob-watcher": "^5.0.5",
     "html-whitespace-sensitive-tag-names": "^1.0.3",
-    "http-server": "^0.12.3",
     "isomorphic-git": "*",
     "js-yaml": "^4.0.0",
     "mdast-util-heading-range": "^2.1.5",
@@ -52,7 +51,7 @@
     "mkdirp": "^1.0.4",
     "node-fetch": "*",
     "path-browserify": "^1.0.1",
-    "prism-react-renderer": "*",
+    "prettier": "*",
     "process": "^0.11.10",
     "querystring-es3": "*",
     "react": "^17.0.1",
@@ -73,7 +72,6 @@
     "remark-stringify": "^9.0.0",
     "remark-toc": "^7.0.0",
     "remark-wiki-link": "^1.0.2",
-    "spdy": "^4.0.2",
     "stylus": "^0.54.8",
     "to-vfile": "^6.1.0",
     "unified": "^9.2.0",
@@ -91,6 +89,6 @@
     "webpack-node-externals": "^2.5.2"
   },
   "devDependencies": {
-    "shebang-loader": "0.0.1"
+    "webpack-bundle-analyzer": "^4.4.2"
   }
 }
