--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "querystring-es3": "*",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-force-graph-2d": "^1.23.6",
     "react-highlight.js": "*",
     "rehype-document": "^5.1.0",
     "rehype-format": "^3.1.0",
