--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/preset-typescript": "^7.12.7",
     "@babel/register": "^7.12.1",
     "@codemirror/basic-setup": "^0.18.0",
+    "@codemirror/autocomplete": "^0.20.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
